tests/baselines/reference/interfaceNaming1.errors.txt
tests/cases/compiler/interfaceNaming1.ts(1,1): error TS2693: 'interface' only refers to a type, but is being used as a value here.
tests/cases/compiler/interfaceNaming1.ts(1,11): error TS1438: Interface must be given a name.
tests/cases/compiler/interfaceNaming1.ts(3,1): error TS2693: 'interface' only refers to a type, but is being used as a value here.
tests/cases/compiler/interfaceNaming1.ts(3,13): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.


==== tests/cases/compiler/interfaceNaming1.ts (4 errors) ====
    interface { }
    ~~~~~~~~~
!!! error TS2693: 'interface' only refers to a type, but is being used as a value here.
              ~
!!! error TS1438: Interface must be given a name.
    interface interface{ }
    interface & { }
    ~~~~~~~~~
!!! error TS2693: 'interface' only refers to a type, but is being used as a value here.
                ~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    